--- a/src/App.css
+++ b/src/App.css
@@ -18,40 +18,22 @@ header h1 {
     display: block;
     text-align: center;
     font-size: 24px;
-    color: #222;
+    color: #413F42;
     margin: 5px auto;
+    font-family: 'Permanent Marker', cursive;
 }
 
 header h2 {
     display: block;
     text-align: center;
-    font-size: 10px;
-    font-style: italic;
-    color: #777;
+    font-size: 1rem;
+    color: #888;
     margin: 8px auto;
+    font-family: 'Caveat', cursive;
 }
 
 .content {
     padding: 14px 30px;
-}
-
-.content button {
-    display: block;
-    width: 100%;
-    padding: 6px 16px;
-    font-size: 14px;
-    line-height: 1.3333333;
-    border-radius: 20px;
-    color: #fff;
-    background-color: #337ab7;
-    border-color: #2e6da4;
-    border: 1px solid transparent;
-}
-
-.content button:hover {
-    background-color: #286090;
-    border-color: #204d74;
-    cursor: pointer;
 }
 
 .content input {
@@ -66,10 +48,6 @@ header h2 {
     border-bottom: 0.5px solid #aaa;
 }
 
-.content input::placeholder {
-    color: #999;
-    font-style: italic;
-}
 
 .content input:focus {
     outline: none;
@@ -90,6 +68,7 @@ header h2 {
     padding: 0 10px;
 }
 
+
 .content hr {
     margin: 12px 0;
     border: 0.8px solid #d4d4d4;
@@ -102,8 +81,9 @@ footer {
 
 footer>a {
     text-decoration: none;
-    font-size: 9px;
-    color: #222;
+    font-size: 10px;
+    color: #878787;
+    margin-right: 10px;
 }
 
 .hidden {
